# sdwebui-modelzoo

./: docarray-0.17.1-py3-none-any.whl  install.py  requirements.txt  style.css
javascript/: modelzoo_browser.js
scripts/: modelzoo_browser.py  utils.py
scripts/modelzoo/: LICENSE  README.md  demo.ipynb  requirements.txt  setup.cfg  setup.py
scripts/modelzoo/modelzoo/: insert.py  metainfo.py  modelzoo.py  prompt.py  utils.py
scripts/modelzoo/modelzoo/tests/: test_metainfo.py  test_modelzoo_coreapi.py  test_modelzoo_jinaapi.py  test_modelzoo_openapi.py  test_prompt.py  test_utils.py
