[metadata]
name = modelzoo
version = 0.1
author = Zhoulou.wzh
author_email = zhoulou.wzh@alibaba-inc.com
description = Modelzoo Management with ModelScope-gitlab lfs and DocArray multimedia search extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.alibaba-inc.com/zhoulou.wzh/modelzoo/blob/master/README.md

[options]
packages = find:
install_requires =
    docarray
    modelscope
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    test*
